css/vAmiga.css
 :root {
  --darkbg: #2d2d2d;
  --lightbg: #e1dfe1;
  --lighterbg: #f0f0f0;
}

#canvas {
    position:fixed;
    left:0;
    right:0;
    background-color: var(--darkbg);
    user-select: none;
    -webkit-user-select: none;
    outline: none;
}

.pixel_art{
    image-rendering: pixelated;
    image-rendering: crisp-edges;
}

#drop_zone {
    cursor: pointer;
    border: 3px dashed var(--blue);
    height: 30px;
    border-radius: 5px;
    min-width: 64px;
}

[data-theme="dark"] #drop_zone {
    background-color: var(--darkbg);
}

.scrollx-group > .row {
display: flex;
flex-wrap: nowrap;
overflow-x: auto;
}
.scrollx-group > .row > .col-xs-4 {
flex: 0 0 auto;
}
.scrollx-group > .row > .col {
flex: 0 0 auto;
}

body
{
    user-select: none;
    -webkit-user-select: none;
    overflow:hidden;
    background-color: var(--lighterbg) !important;
}

[data-theme="dark"] {
background-color: black !important;
color: var(--light) !important;
}
    


/* the filled circle in the switch was to high */
.custom-switch .custom-control-label::before{
    top: .23rem;
}

[data-theme="dark"] .custom-control-input:checked ~ .custom-control-label::before {
border-color: var(--green) !important;
background-color: var(--green) !important;
}

#port1, #port2 {
    height:32px;
    min-width:80px;
    width: 48%;
    padding-top: .165rem;
    margin-top: 1px; 
    background-color: inherit !important;
    border-color: var(--darkbg);
    color: var(--darkbg) !important;
}

    
[data-theme="dark"] #port1, [data-theme="dark"] #port2 {
    border-color: var(--light);
    color: #aaa !important;
}

#stored_roms, #stored_exts {
    background-color: inherit !important;
    border-color: var(--darkbg);
    color: var(--darkbg) !important;
}

[data-theme="dark"] #stored_roms, [data-theme="dark"] #stored_exts {
    border-color: var(--light);
    color: #aaa !important;
}




.btn-sm
{
    font-size: .86rem;
}

.custom_key
{
    font-size: 1.2rem !important;
    opacity: 0.7 !important;
    padding-top: 0.05rem;
    padding-bottom: 0.05rem;
    z-index: 20;
    user-select: none;
}

[data-theme="dark"] .custom-select {
color: var(--light) !important;
border-color: var(--light) !important;
}

[data-theme="dark"] #output {
background-color: var(--gray) !important;
color: var(--light) !important;
}

.modal-content {
background-color: var(--lightbg) !important;
}

[data-theme="dark"] .modal-content {
background-color: var(--darkbg) !important;
}

[data-theme="dark"] .close {
color: var(--light) !important;
}

.card {
background-color: var(--lighterbg) !important;
}
[data-theme="dark"] .card {
background-color: #555 !important;
}

[data-theme="dark"] .list-group-item {
background-color: #555 !important;
color: var(--light) !important;
}

[data-theme="dark"] .list-group-item.active {
background-color: #007bff !important;
}

[data-theme="dark"] .list-group-item.disabled {
color: #aaa !important;
}



#virtual_keyboard {
    position:fixed;
    bottom:0;
    z-index:999;
    width:100%;
    background-color: var(--lightbg);
}

[data-theme="dark"] #virtual_keyboard {
    background-color:var(--darkbg);
}

.gc_choice_text span, .vbk_choice_text span, .vjoy_choice_text span {
    background-color: var(--gray);
    border-radius: 6px;
    padding-left: 4px;
    padding-right: 4px;
    color: white;
}


#navbar {
    background-color: var(--lightbg);

    position: fixed; 
    top:0; 
    left:0; 
    opacity: 0.85; backdrop-filter: blur(6px);
}

[data-theme="dark"] #navbar {
    background-color:var(--darkbg);
}

#div_toast {
    z-index:2000;
}   
#toast_body, #toast_header  {
    background-color:var(--lightbg);
}
[data-theme="dark"] #toast_body, [data-theme="dark"] #toast_header  {
    background-color:var(--dark);
    color:white;
}


.icon {
    fill: var(--dark);
    color: var(--dark) !important;
}

[data-theme="dark"] .icon {
    fill: var(--light);
    color: var(--light) !important;
}




.justify-start {
  margin-right: auto;
}




.custom-control-lg .custom-control-label::before,
.custom-control-lg .custom-control-label::after {
    top: 0.0rem !important;
    left: -2rem !important;
    width: 1.5rem !important;
    height: 1.5rem !important;
}

.custom-control-lg .custom-control-label {
    margin-left: 0.5rem !important;
    font-size: 1rem !important;
}

.alert-darkest {
    color: var(--light);
    background-color: var(--gray);
    border-color: #c6c8ca;
}

#no_disk_rom_msg {
    color: var(--light);
    background-color: var(--danger);
    border-color: #c6c8ca;
}

.browser-item-text {
    font-size: small;
}

#view_detail {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2000;
    background-color: var(--lightbg);
    outline: none;
    overflow-y: auto;
    opacity: 1.0;
}


[data-theme="dark"] #view_detail {
    background-color: var(--darkbg);
}



#detail_content{
    margin-top:45px;
}

.detail_screenshot {
    width: 100%;
}

#detail_back {
    position: fixed;
    z-index: 1000;
    width: 100%;
    height: 45px;
    text-align: left;
    background-color: var(--darkbg);
    opacity: 0.6;
    font-size: larger;
    border: none;
    color: var(--light);
}

button[id^="detail_run"] {
    width: 100%;
    font-size: xx-large;
}

.copy-btn {
    background-color: var(--lightbg);
    border-color: var(--lightbg);
    color: var(--blue);
}

[data-theme="dark"] .copy-btn {
    background-color: var(--darkbg);
    border-color: var(--darkbg);
    color: var(--blue);
}

.copy_run_link {
    width: 94%;
    font-size: xx-small;
    background-color: var(--lightbg);
    /*color: var(--dark);*/
    border: none;
}

[data-theme="dark"] .copy_run_link {
    background-color: var(--darkbg);
    color: var(--secondary);
}

#search {
    border-color: var(--blue);
    border-left: none;
}

[data-theme="dark"] #search {
    background-color: var(--darkbg);
    color: var(--light);
    border-color: var(--blue);
    border-left: none;
}

#search_symbol {
    background-color: #0062cc;
    border: none;
    color: var(--light);
}

#alert_wait {
    z-index: 2000;
    top: 40%;
    left: 15%;
    position: absolute;
    width: 70%;
    opacity: 0.83;
}


[data-theme="dark"] textarea {
    background-color: var(--darkbg);
    color: var(--light);
}


[data-theme="dark"] .dropdown-menu.show {
    background-color: #444444;
}

[data-theme="dark"] .dropdown-item {
    color: var(--light);
}

.dropdown-item:focus, 
.dropdown-item:hover {
    background-color: var(--blue);
    color: var(--light);
}


.keycap_shift {
    font-size:x-small;
}

[shift-keys="pressed"] .keycap_shift {
    font-size:medium;
}

.keycap {
    font-size:medium;
}

[shift-keys="pressed"] .keycap {
    font-size:x-small;
}

[key-state="pressed"] {
    box-shadow: inset 0 0 0.1em white, 0em 0em 3em white;
}

.darkkey {
    background-color: rgb(78,87,95);
    border-color: #222222;
}
.capslock {
    font-size:xx-small;
}

.amigakey { 
    color: red;
    font-style: italic;
    font-family: serif;
    font-size: x-large;
    padding-top: 0;
    padding-bottom: 0;
}

[ControlLeft-key="pressed"] #button_ControlLeft
{
    background-color: var(--blue) !important
}

[CapsLock-key="pressed"]  #button_CapsLock, 
[ShiftLeft-key="pressed"]  #button_ShiftLeft,
[ShiftRight-key="pressed"] #button_ShiftRight,
[leftAmiga-key="pressed"]  #button_leftAmiga,
[rightAmiga-key="pressed"] #button_rightAmiga,
[AltLeft-key="pressed"]  #button_AltLeft,
[AltRight-key="pressed"] #button_AltRight
{
    background-color: var(--green) !important;
}



.outlined {
    border-radius:5px;
    border-style:solid;
    border-width: 2px;
}



#div_drive_select {
    position:absolute;
    z-index:3000;
    bottom:0;
    left:5%;
    width:90%;
    display:flex;
    flex-direction:column;
    justify-content:center;
    transform: translateY(100%);
    border-top-left-radius: 8px; 
    border-top-right-radius: 8px; 
    background-color: var(--lightbg);
}
[data-theme="dark"] #div_drive_select {
    background-color:var(--dark);
}

#drive_select_file {
    padding:0.5em;
    margin-top: 1.4em;
    background-color: var(--lightbg);
    display:flex;
    justify-content:center;
}
[data-theme="dark"] #drive_select_file {
    background-color:var(--dark);
}


#drive_select_choice {
    padding-top: 0.5em;
    display:flex;width:100%;
    flex-direction:row;
    justify-content:center;
    background-color: var(--lightbg);
}
[data-theme="dark"] #drive_select_choice {
    background-color:var(--dark);
}

.slide-in {
    animation: slide-in 0.5s forwards;
}

.slide-out {
    animation: slide-out 0.7s forwards;
}
    
@keyframes slide-in {
    100% { transform: translateY(0%); }
}
    
@keyframes slide-out {
    0% { transform: translateY(0%); }
    100% { transform: translateY(100%); }
}

#version_selector {
    border-radius:6px;
    border-width:2px;
}

[data-theme="dark"] #version_selector {
    border-color:var(--light);
    background-color:var(--darkbg);
    color:var(--light);    
}


.is-invalid~.invalid-feedback, .is-invalid~.invalid-tooltip, .was-validated :invalid~.invalid-feedback, .was-validated :invalid~.invalid-tooltip {
    display: block;
    background-color: red;
    color: white;
    border-bottom-right-radius: 0.4em;
    border-bottom-left-radius: 0.4em;
    padding: 0.4em;
    margin-top: 0;
    margin-left: 0.15em;
    margin-right: 0.15em;
}

